# RD2229

./: .flake8  .gitignore  .pre-commit-config.yaml  .rd2229_config.yaml  00_Progetto_di_test.jsonp  CARICAMENTO_AUTOMATICO_STARTUP.md  CHANGELOG.md  COMPLETAMENTO_TASK.md  CONTRIBUTING.md  COPILOT_SEARCH_2229.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SUMMARY.md  MATPLOTLIB_INTEGRATION.md  MIGRATION.md  Makefile  OFFLINE_INSTRUCTIONS.md  PERSISTENZA_COMPLETATA.md  PERSISTENZA_MATERIAL_REPOSITORY.md  PERSISTENZA_REPOSITORY.md  PERSISTENZA_SUMMARY.md  PLANCODE.md  RD2229.code-workspace  README.md  RIEPILOGO_FASE_3_CARICAMENTO_STARTUP.md  SECTION_MANAGER_IMPROVEMENTS.md  VERIFICA_7_OBIETTIVI.md  VERIFICA_FINALE_COMPLETE_9_OBIETTIVI.md  WINDOW_MANAGEMENT_FIX.md  __init__.py  __init__.py.disabled  __main__.py  analyze_sections_json.py  debug_material_suggest.py  debug_material_suggest2.py  demo_config_system.py  demo_export_backup.py  demo_matplotlib_integration.py  demo_persistenza.py  demo_sections.json  demo_verification_engine.py  (+42 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
RD2229.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
app/: __init__.py
archive/: historical_materials.json
calculations/: __init__.py
config/: README.md  calculation_codes_loader.py  historical_materials_loader.py
core/: __init__.py  examples_sections.py  frc.py  geometry.py  interpolation.py  materials.py  reinforcement.py  section_properties.py  verification_bas_adapter.py  verification_core.py  verification_engine.py
core_models/: __init__.py  loads.py  materials.py
data/: historical_materials.json  material_sources.json  materials.json  notification_settings.json  rd2229_table.csv  tables.schema.json
docs/: AUTO_AGGIORNAMENTO_VERIFICATION_TABLE.md  CARICAMENTO_AUTOMATICO_STARTUP.md  CLAUDE.md  CONFIG_JSONCODE_SYSTEM.md  FIXES_WINDOW_AND_SEARCH.md  FRC_IMPLEMENTATION.md  GESTIONE_CAMPI_DINAMICI.md  IMPLEMENTAZIONE_PERSISTENZA.md  MODIFICHE_5_OBIETTIVI.md  OFFLINE_INSTRUCTIONS.md  PERSISTENZA_COMPLETATA.md  PERSISTENZA_MATERIAL_COMPLETATA.md  PERSISTENZA_MATERIAL_REPOSITORY.md  PERSISTENZA_REPOSITORY.md  PERSISTENZA_SUMMARY.md  RIEPILOGO_FASE_3_CARICAMENTO_STARTUP.md  RIEPILOGO_NUOVE_SEZIONI_E_ROTAZIONE.md  ROADMAP.md  SECTION_MANAGER_IMPROVEMENTS.md  SHEAR_FORM_FACTORS.md  SINTESI_FINALE_7_OBIETTIVI.md  TEST_REPOSITORY_CANONICI.md  VERIFICATION_TABLE_KEYBOARD.md  VERIFICA_7_OBIETTIVI.md  VERIFICA_FINALE_COMPLETE_9_OBIETTIVI.md  WINDOW_MANAGEMENT_FIX.md  formulas.md  index.md  perf.md
examples/: demo_backup_system.py  demo_export_backup.py  demo_export_gui.py  demo_material_persistence.py  demo_persistenza.py  demo_recovery_system.py  demo_verification_table_auto_update.py
gui/: materials_gui.py  section_gui.py
historical_ta/: __init__.py  checks.py  geometry.py  materials.py  stress.py
logs/: README.md
patches/: 0001-Deprecate-sections.json-auto-migrate-to-sec_reposito.patch
scripts/: apply_patch_and_test.ps1  check_dynamic_fields.py  debug_combobox.py  debug_combobox2.py  debug_suggestions.py  debug_verification_input.py  demo_campi_dinamici.py  inspect_materials.py  manual_demo.py  materials_cli.py  replace_sigma.py  run-local.ps1  run-local.sh  run_concrete_tests.py  run_materials_demo.py  run_materials_gui.py  run_materials_runner.py  run_verification_demo.py  smoke_imports.py  test_plot_section.py
sec_repository/: sec_repository.jsons  sec_repository_backup.jsons
sections_app/: PLANCODE.md  __init__.py  app.py  geometry_model.py  section_calculations.py  section_graphics.py  storage.py
src/: __init__.py  quantities_registry.csv  quantities_registry.py
tests/: debug_focus.py  debug_section_focus.py  debug_suggest.py  golden_rd2229.json  test_area_calculations.py  test_background_executor.py  test_comprehensive.py  test_concrete_strength.py  test_config_loaders.py  test_core_and_graphics.py  test_core_improved.py  test_core_selection_scoring.py  test_csv_io.py  test_deviated_bending.py  test_domain_materials.py  test_domain_sections.py  test_export_gui.py  test_frc_verification_window.py  test_geometry_cache.py  test_golden_rd2229.py  test_historical_material_window.py  test_historical_materials.py  test_historical_ta.py  test_integration_persistence.py  test_main_window_gui.py  test_main_window_material_button.py  test_main_window_save.py  test_manual_demo.py  test_material_suggestions_focus.py  test_materials_cache.py  test_module_registry.py  test_module_registry_refresh.py  test_module_selector_controller.py  test_module_selector_frc_buttons.py  test_module_selector_integration.py  test_module_selector_material_button.py  test_module_selector_section_button.py  test_module_selector_ui.py  test_new_architecture.py  test_new_sections.py  (+47 more)
tests_legacy/: README.md  conftest.py  test_all_sections.py  test_auto_load_startup.py  test_backup_system.py  test_bas_adapter.py  test_canonical_repository_paths.py  test_concrete_strength.py  test_config_loaders.py  test_deviated_bending.py  test_drawing_geometry.py  test_export_backup.py  test_export_gui.py  test_frc_basic.py  test_frc_verification_window.py  test_gui_compatibility.py  test_historical_import_csv.py  test_historical_material_window.py  test_historical_materials.py  test_historical_ta.py  test_integration_persistence.py  test_json_wrappers.py  test_main_window_material_button.py  test_main_window_save.py  test_manual_demo.py  test_material_persistence.py  test_materials_frc.py  test_materials_repository.py  test_migration_sections_json.py  test_module_selector_frc_buttons.py  test_module_selector_material_button.py  test_module_selector_section_button.py  test_new_sections.py  test_notification_center.py  test_notification_service.py  test_notification_settings.py  test_notification_settings_ui.py  test_numerical_ta.py  test_persistence.py  test_recovery_system.py  (+32 more)
tools/: __init__.py  concrete_strength.py  debug_run_suggest.py  materials_manager.py  profile_calculus.py  rd2229_calc.py  run_mypy_ci.py  sync_verifications.py
verifications/: __init__.py
(+331 files in other folders)
