[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rd2229"
version = "0.1.0"
description = "Structural engineering calculations including RD 2229/1939 methods"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
select = ["E", "F", "W", "I", "D", "N", "R"]
fix = true
target-version = "py311"
line-length = 120
extend-ignore = ["N803","N806","N802","N999","N815","D401","D417","D105","D100","D101","D102","D103","D104","D107","D205"]
exclude = ["tests_legacy"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml --maxfail=1 -q"
testpaths = ["tests"]

[tool.mutmut]
packages = ["src/core_calculus","src/methods"]

[tool.setuptools.packages.find]
include = ["src*","src.*"]
